fixed some memory problems, general speedup added custom serializers